Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/SVMX_PS_Record_Update_Request__c.object-meta.xml
<CustomObject>
    <label>Record Update Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Record Update Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Update Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>