Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/fields/SVMX_PS_Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related account record for Installed Product request</description>
    <inlineHelpText>Related account record for Installed Product request</inlineHelpText>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Record Update Requests</relationshipLabel>
    <relationshipName>Record_Update_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>