Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/fields/SVMX_PS_IP_Serial_Num__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_IP_Serial_Num__c</fullName>
    <description>Installed Product Serial Number</description>
    <inlineHelpText>Installed Product Serial Number</inlineHelpText>
    <label>Installed Product Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>