Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/fields/SVMX_PS_Loc_SAP_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Loc_SAP_Ext_ID__c</fullName>
    <description>Location SAP External ID</description>
    <inlineHelpText>Location SAP External ID</inlineHelpText>
    <label>Location SAP External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>