Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/fields/SVMX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related account record for Location request</description>
    <inlineHelpText>Related account record for Location request</inlineHelpText>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Record Update Requests</relationshipLabel>
    <relationshipName>Record_Update_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>