Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/fields/SVMX_PS_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Status__c</fullName>
    <description>Status of Record Update Request</description>
    <inlineHelpText>Status of Record Update Request</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>