Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/fields/SVMX_PS_Submitted_Status_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Submitted_Status_Date_Time__c</fullName>
    <description>Updates Submitted Status Date/Time to (now)</description>
    <inlineHelpText>Updates Submitted Status Date/Time to (now)</inlineHelpText>
    <label>Submitted Status Date/Time</label>
    <type>DateTime</type>
</CustomField>