Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/recordTypes/SVMX_PS_Account.recordType-meta.xml
<RecordType>
    <fullName>SVMX_PS_Account</fullName>
    <active>true</active>
    <label>SVMX PS - Account</label>
</RecordType>