Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/recordTypes/SVMX_PS_Installed_Product.recordType-meta.xml
<RecordType>
    <fullName>SVMX_PS_Installed_Product</fullName>
    <active>true</active>
    <label>SVMX PS - Installed Product</label>
</RecordType>