Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/recordTypes/SVMX_PS_Location.recordType-meta.xml
<RecordType>
    <fullName>SVMX_PS_Location</fullName>
    <active>true</active>
    <label>SVMX PS - Location</label>
</RecordType>