Perkin-UAT/force-app/main/default/objects/SVMX_PS_Record_Update_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SVMX_PS_Status__c</columns>
    <columns>SVMX_PS_Installed_Product__c</columns>
    <columns>SVMX_PS_Location__c</columns>
    <columns>SVMX_PS_Account__c</columns>
    <columns>SMAX_PS_Send_To_Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SVMX_PS_Submitted_By__c</field>
        <operation>equals</operation>
        <value>ServiceMax Batch</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>